updates to code, clean up readme

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+A small but growing collection of css3 text shadows.
+
 This repo and it's contents can be viewed at:
 
 http://stevezimmerman.is/experimenting-with/text-shadows
